# shelf-back

./: .coveragerc  .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  Dockerfile.worker  Procfile  README.md  datamodel.md  dev.env  docker-compose.yml  docker-entrypoint.sh  edgedb.toml  gel.toml  gunicorn_conf.py  manage.py  mediatypes.csv  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  schema.esdl  start-edgedb  start.sh
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: pyproject-dependencies.instructions.md  tests.instructions.md  tortoise-models.instructions.md  tortoise-repositories.instructions.md
.github/workflows/: automerge.yml  build.yml  deploy.yml  lint.yml  test.yml
.heroku/: README.md  start-edgedb  web-docker-entrypoint.sh  worker-docker-entrypoint.sh
alembic/: env.py
alembic/versions/: 011640d11a5a_initial.py  0676da962e5d_initial.py  143b26333339_initial.py  3d9e95fa1e57_add_user_model.py  4fe3e9b26c81_initial.py  cf7b858da2ca_initial.py
app/: __init__.py  actions.py  cache.py  config.py  db.py  entities.py  errors.py  hashes.py  main.py  mediatypes.py  metadata.py  models.py  security.py  storage.py  taskgroups.py  tasks.py  template.py  thumbnails.py  timezone.py  tokens.py  typedefs.py
app/accounts/: schemas.py  views.py
app/api/: __init__.py  deps.py  exceptions.py  main.py  paginator.py  shortcuts.py
app/auth/: crud.py  deps.py  exceptions.py  models.py  schemas.py  security.py  views.py
app/contrib/: aws_v4_auth.py  slugify.py
app/crud/: __init__.py  account.py  file.py  fingerprint.py  mediatype.py  metadata.py  namespace.py  shared_link.py  user.py
app/domain/: entities.py
app/entities/: account.py  namespace.py
app/files/: crud.py  models.py  views.py
app/infrastructure/: context.py  provider.py
app/models/: file.py  namespace.py  user.py
app/storage/: __init__.py  base.py  filesystem.py  s3.py
app/toolkit/: chash.py  json_.py  mediatypes.py  security.py  taskgroups.py  timezone.py
app/users/: crud.py  schemas.py  views.py
app/worker/: main.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql
requirements/: base.in  base.txt  dev.in  dev.txt  lint.in  lint.txt  test.in  test.txt
tests/: conftest.py  factories.py  test_actions.py  test_config.py  test_db.py  test_entities.py  test_fixtures.py  test_hashes.py  test_manage.py  test_mediatypes.py  test_metadata.py  test_security.py  test_storage.py  test_taskgroups.py  test_tasks.py  test_thumbnails.py  test_timezone.py  test_tokens.py
tests/api/: conftest.py  test_deps.py  test_exceptions.py  test_main.py  test_paginator.py  test_shortcuts.py
tests/crud/: test_file.py  test_fingerprint.py  test_metadata.py  test_namespace.py  test_user.py
tests/infrastructure/: test_context.py
tests/test_api/: test_accounts.py  test_auth.py  test_deps.py  test_features.py  test_files.py  test_shortcuts.py  test_users.py
tests/test_crud/: test_account.py  test_file.py  test_fingerprint.py  test_mediatype.py  test_metadata.py  test_namespace.py  (+1 more)
(+491 files in other folders)
